toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__destructuring_with_alias_and_default_value.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const { x: newX = 100 } = {};\n"
---
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: newX
      in_scope: false
      exposed: true
- - AssignmentFromStatement
