toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__destructuring_with_computed_property_names-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const key = 'p';\nconst { [key]: value } = { p: 16 };\n"
---
internal_call_graph: {}
cell_exposed_values:
  key: {}
  value: {}
cell_depended_values: {}
triggerable_functions: {}
