toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__nested_object_destructuring.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const { e: { f } } = { e: { f: 4 } };\n"
---
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: f
      in_scope: false
      exposed: true
- - AssignmentFromStatement
