toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__object_destructuring_with_renaming_and_default-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const { c: renamed, d = 'default' } = { c: 3 };\n"
---
internal_call_graph: {}
cell_exposed_values:
  d: {}
  renamed: {}
cell_depended_values: {}
triggerable_functions: {}
