toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__variable_swapping_with_destructuring-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "let aa = 'first', bb = 'second';\n[aa, bb] = [bb, aa];\n"
---
internal_call_graph: {}
cell_exposed_values:
  aa: {}
  bb: {}
cell_depended_values: {}
triggerable_functions: {}
